@@ -44,7 +44,7 @@
 			<table class="display" id="hardwareparamsserial" border="0" cellpadding="0" cellspacing="20">
 				<tr>
 					<td align="right" style="width:110px"><label id="lblserialport" for="name">Serial Port:</label></td>
-					<td><select id="comboserialport" style="width:180px" class="combobox ui-corner-all">
+					<td><select id="comboserialport" style="width:210px" class="combobox ui-corner-all">
 							<!--#embed serialdevices -->
 							</select>
 					</td>
@@ -193,7 +193,7 @@ function UpdateHardware(idx)
 		return;
 	}
 	
-	var bEnabled=$('#hardwarecontent #hardwareparamsshareenabled #enabled').attr('checked')?true:false;
+	var bEnabled=$('#hardwarecontent #hardwareparamstable #enabled').attr('checked')?true:false;
 	
 	var text = $("#hardwarecontent #hardwareparamstable #combotype option:selected").text();
 	if (text.indexOf("USB") >= 0)
@@ -303,7 +303,7 @@ function AddHardware()
 		return;
 	}
 	
-	var bEnabled=$('#hardwarecontent #hardwareparamsshareenabled #enabled').attr('checked')?true:false;
+	var bEnabled=$('#hardwarecontent #hardwareparamstable #enabled').attr('checked')?true:false;
 	
 	var text = $("#hardwarecontent #hardwareparamstable #combotype option:selected").text();
 	if (text.indexOf("USB") >= 0)
